Refactoring the upsert compaction related code
1. Fix the issue with fetching validDocId metadata for table with
   a large number of segments. (Added POST API with list of segments
   to be part of the request body)
2. Added POST support for MultiHttpRequest to cover 1.
3. Added GET /tables/<tableName>/validDocIdMetadata API on the controller
   for improving debuggability.