@@ -18,9 +18,11 @@
  */
 package org.apache.pinot.controller.util;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.google.common.base.Preconditions;
 import com.google.common.collect.BiMap;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -28,9 +30,21 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
+import javax.annotation.Nullable;
+import javax.ws.rs.client.ClientBuilder;
+import javax.ws.rs.core.Response;
+import org.apache.commons.lang3.tuple.Pair;
 import org.apache.http.conn.HttpClientConnectionManager;
+import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
 import org.apache.pinot.common.restlet.resources.TableMetadataInfo;
+import org.apache.pinot.common.restlet.resources.TableSegments;
+import org.apache.pinot.common.restlet.resources.ValidDocIdMetadataInfo;
+import org.apache.pinot.common.utils.RoaringBitmapUtils;
 import org.apache.pinot.spi.utils.JsonUtils;
+import org.glassfish.jersey.client.ClientConfig;
+import org.glassfish.jersey.client.ClientProperties;
+import org.roaringbitmap.RoaringBitmap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -46,6 +60,11 @@ public class ServerSegmentMetadataReader {
 
   private final Executor _executor;
   private final HttpClientConnectionManager _connectionManager;
+
+  public ServerSegmentMetadataReader() {
+    _executor = Executors.newFixedThreadPool(1);
+    _connectionManager = new PoolingHttpClientConnectionManager();
+  }
 
   public ServerSegmentMetadataReader(Executor executor, HttpClientConnectionManager connectionManager) {
     _executor = executor;
@@ -100,11 +119,11 @@ public class ServerSegmentMetadataReader {
         tableMetadataInfo.getColumnCardinalityMap().forEach((k, v) -> columnCardinalityMap.merge(k, v, Double::sum));
         tableMetadataInfo.getMaxNumMultiValuesMap().forEach((k, v) -> maxNumMultiValuesMap.merge(k, v, Double::sum));
         tableMetadataInfo.getColumnIndexSizeMap().forEach((k, v) -> columnIndexSizeMap.merge(k, v, (l, r) -> {
-            for (Map.Entry<String, Double> e : r.entrySet()) {
-              l.put(e.getKey(), l.getOrDefault(e.getKey(), 0d) + e.getValue());
-            }
-            return l;
-          }));
+          for (Map.Entry<String, Double> e : r.entrySet()) {
+            l.put(e.getKey(), l.getOrDefault(e.getKey(), 0d) + e.getValue());
+          }
+          return l;
+        }));
       } catch (IOException e) {
         failedParses++;
         LOGGER.error("Unable to parse server {} response due to an error: ", streamResponse.getKey(), e);
@@ -180,27 +199,126 @@ public class ServerSegmentMetadataReader {
     return segmentsMetadata;
   }
 
+  /**
+   * This method is called when the API request is to fetch validDocId metadata for a list segments of the given table.
+   * This method will pick a server that hosts the target segment and fetch the segment metadata result.
+   *
+   * @return segment metadata as a JSON string
+   */
+  public List<ValidDocIdMetadataInfo> getValidDocIdMetadataFromServer(String tableNameWithType,
+      Map<String, List<String>> serverToSegmentsMap, BiMap<String, String> serverToEndpoints,
+      @Nullable List<String> segmentNames, int timeoutMs) {
+    List<Pair<String, String>> serverURLsAndBodies = new ArrayList<>();
+    for (Map.Entry<String, List<String>> serverToSegments : serverToSegmentsMap.entrySet()) {
+      List<String> segmentsForServer = serverToSegments.getValue();
+      List<String> segmentsToQuery = new ArrayList<>();
+      for (String segment : segmentsForServer) {
+        if (segmentNames == null) {
+          // If segmentNames is null, query all segments
+          segmentsToQuery.add(segment);
+        } else if (segmentNames.contains(segment)) {
+          segmentsToQuery.add(segment);
+        }
+      }
+      serverURLsAndBodies.add(generateValidDocIdMetadataURL(tableNameWithType, segmentsToQuery,
+          serverToEndpoints.get(serverToSegments.getKey())));
+    }
+
+    // request the urls from the servers
+    CompletionServiceHelper completionServiceHelper =
+        new CompletionServiceHelper(_executor, _connectionManager, serverToEndpoints);
+
+    Map<String, String> requestHeaders = Map.of("Content-Type", "application/json");
+    CompletionServiceHelper.CompletionServiceResponse serviceResponse =
+        completionServiceHelper.doMultiPostRequest(serverURLsAndBodies, tableNameWithType, false, requestHeaders,
+            timeoutMs, null);
+
+    List<ValidDocIdMetadataInfo> validDocIdMetadataInfos = new ArrayList<>();
+    int failedParses = 0;
+    int returnedSegmentsCount = 0;
+    for (Map.Entry<String, String> streamResponse : serviceResponse._httpResponses.entrySet()) {
+      try {
+        String validDocIdMetadataList = streamResponse.getValue();
+        List<ValidDocIdMetadataInfo> validDocIdMetadataInfo =
+            JsonUtils.stringToObject(validDocIdMetadataList, new TypeReference<ArrayList<ValidDocIdMetadataInfo>>() {
+            });
+        validDocIdMetadataInfos.addAll(validDocIdMetadataInfo);
+        returnedSegmentsCount++;
+      } catch (Exception e) {
+        failedParses++;
+        LOGGER.error("Unable to parse server {} response due to an error: ", streamResponse.getKey(), e);
+      }
+    }
+    if (failedParses != 0) {
+      LOGGER.error("Unable to parse server {} / {} response due to an error: ", failedParses,
+          serverURLsAndBodies.size());
+    }
+
+    if (segmentNames != null && returnedSegmentsCount != segmentNames.size()) {
+      LOGGER.error("Unable to get validDocIdMetadata from all servers. Expected: {}, Actual: {}", segmentNames.size(),
+          returnedSegmentsCount);
+    }
+    LOGGER.debug("Retrieved segment metadata from servers.");
+    return validDocIdMetadataInfos;
+  }
+
+  /**
+   * This method is called when the API request is to fetch validDocIds for a segment of the given table. This method
+   * will pick a server that hosts the target segment and fetch the validDocIds result.
+   *
+   * @return a bitmap of validDocIds
+   */
+  public RoaringBitmap getValidDocIdsFromServer(String tableNameWithType, String segmentName, String endpoint,
+      int timeoutMs) {
+    // Build the endpoint url
+    String url = generateValidDocIdsURL(tableNameWithType, segmentName, endpoint);
+
+    // Set timeout
+    ClientConfig clientConfig = new ClientConfig();
+    clientConfig.property(ClientProperties.CONNECT_TIMEOUT, timeoutMs);
+    clientConfig.property(ClientProperties.READ_TIMEOUT, timeoutMs);
+
+    Response response = ClientBuilder.newClient(clientConfig).target(url).request().get(Response.class);
+    Preconditions.checkState(response.getStatus() == Response.Status.OK.getStatusCode(),
+        "Unable to retrieve validDocIds from %s", url);
+    byte[] validDocIds = response.readEntity(byte[].class);
+    return RoaringBitmapUtils.deserialize(validDocIds);
+  }
+
   private String generateAggregateSegmentMetadataServerURL(String tableNameWithType, List<String> columns,
       String endpoint) {
-    try {
-      tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8.name());
-      String paramsStr = generateColumnsParam(columns);
-      return String.format("%s/tables/%s/metadata?%s", endpoint, tableNameWithType, paramsStr);
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException(e.getCause());
-    }
+    tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8);
+    String paramsStr = generateColumnsParam(columns);
+    return String.format("%s/tables/%s/metadata?%s", endpoint, tableNameWithType, paramsStr);
   }
 
   private String generateSegmentMetadataServerURL(String tableNameWithType, String segmentName, List<String> columns,
       String endpoint) {
+    tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8);
+    segmentName = URLEncoder.encode(segmentName, StandardCharsets.UTF_8);
+    String paramsStr = generateColumnsParam(columns);
+    return String.format("%s/tables/%s/segments/%s/metadata?%s", endpoint, tableNameWithType, segmentName, paramsStr);
+  }
+
+  private String generateValidDocIdsURL(String tableNameWithType, String segmentName, String endpoint) {
+    tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8);
+    segmentName = URLEncoder.encode(segmentName, StandardCharsets.UTF_8);
+    return String.format("%s/segments/%s/%s/validDocIds", endpoint, tableNameWithType, segmentName);
+  }
+
+  private Pair<String, String> generateValidDocIdMetadataURL(String tableNameWithType, List<String> segmentNames,
+      String endpoint) {
+    tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8);
+    TableSegments tableSegments = new TableSegments(segmentNames);
+    String jsonTableSegments;
     try {
-      tableNameWithType = URLEncoder.encode(tableNameWithType, StandardCharsets.UTF_8.name());
-      segmentName = URLEncoder.encode(segmentName, StandardCharsets.UTF_8.name());
-      String paramsStr = generateColumnsParam(columns);
-      return String.format("%s/tables/%s/segments/%s/metadata?%s", endpoint, tableNameWithType, segmentName, paramsStr);
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException(e.getCause());
+      jsonTableSegments = JsonUtils.objectToString(tableSegments);
+    } catch (JsonProcessingException e) {
+      LOGGER.error("Failed to convert segment names to json request body: segmentNames={}", segmentNames);
+      throw new RuntimeException(e);
     }
+    return Pair.of(
+        String.format("%s/tables/%s/validDocIdMetadata", endpoint, tableNameWithType), jsonTableSegments);
   }
 
   private String generateColumnsParam(List<String> columns) {
